--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dropdown-tree-select": "^2.8.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
