--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dropdown-tree-select": "^2.8.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-transition-group": "^4.4.5",
@@ -53,6 +53,6 @@
     "constructs": "^10.3.0",
     "esbuild": "^0.23.1",
     "tsx": "^4.18.0",
-    "typescript": "^5.5.4"
+    "typescript": "^4.9.5"
   }
 }
